fin du backend sans graphe

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,9 +7,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="" routerlinkactive="active">A propos</a></li>
-                <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="calculator" routerlinkactive="active">Calculateur</a></li>
+                <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="recette-calculateur" routerlinkactive="active">Calculateur</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="confidentialite" routerlinkactive="active">Politique</a></li>
-                <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="recette" routerlinkactive="active">Recettes</a></li>
+                <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="recettes" routerlinkactive="active">Recettes</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-semibold" href="utilisateur">Utilisateur</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-semibold" routerLink="ingredient-manager" routerlinkactive="active">Ingrédients</a></li>
             </ul>
