--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background: linear-gradient(90deg, #1e3c72, #2a5298); padding: 1rem;">
     <div class="container">
-        <a class="navbar-brand text-white fw-bold" routerLink="" routerlinkactive="active"><i class="bi bi-house-fill"></i></a>
+        <a class="navbar-brand text-white fw-bold" routerLink="" routerlinkactive="active"><img src="https://www.adepro-consultant.fr/images/logos/adepro_logo_trans_inv.png" alt="Accueil" style="height: 30px;"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
