--- a/src/app/pages/ingredients/ingredients.component.html
+++ b/src/app/pages/ingredients/ingredients.component.html
@@ -1,56 +1,55 @@
 <div class="container mt-4">
-    <h2>Liste des ingrédients disponibles :</h2>
-  
-    <!-- Affichage d'un message de chargement -->
-    <div *ngIf="isLoading" class="alert alert-info">
-      Chargement des ingrédients...
-    </div>
-  
-    <!-- Affichage d'une erreur si la requête échoue -->
-    <div *ngIf="errorMessage" class="alert alert-danger">
-      {{ errorMessage }}
-    </div>
-  
-    <!-- Tableau des ingrédients -->
-    <table class="table table-bordered table-striped mt-3" *ngIf="!isLoading && ingredients.length > 0">
-      <thead class="table-dark">
-        <tr>
-          <th>ID</th>
-          <th>Nom</th>
-          <th>Ind. INS</th>
-          <th>Ind. Iode</th>
-          <th>Ind. Sapo.</th>
-          <th>Vol. Mousse</th>
-          <th>Tenue Mousse</th>
-          <th>Douceur</th>
-          <th>Lavant</th>
-          <th>Duretée</th>
-          <th>Solubilité</th>
-          <th>Séchage</th>
-  
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let ingredient of ingredients">
-          <td>{{ ingredient.id }}</td>
-          <td>{{ ingredient.nom }}</td>
-          <td>{{ ingredient.ins }}</td>
-          <td>{{ ingredient.iode }}</td>
-          <td>{{ ingredient.sapo }}</td>
-          <td>{{ ingredient.volMousse }}</td>
-          <td>{{ ingredient.tenueMousse }}</td>
-          <td>{{ ingredient.douceur }}</td>
-          <td>{{ ingredient.lavant }}</td>
-          <td>{{ ingredient.durete }}</td>
-          <td>{{ ingredient.solubilite }}</td>
-          <td>{{ ingredient.sechage }}</td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <!-- Message si aucun ingrédient n'est disponible -->
-    <div *ngIf="!isLoading && ingredients.length === 0" class="alert alert-warning">
-      Aucun ingrédient disponible.
-    </div>
+  <h2>Liste des ingrédients disponibles :</h2>
+
+  <!-- Affichage d'un message de chargement -->
+  <div *ngIf="isLoading" class="alert alert-info">
+    Chargement des ingrédients...
   </div>
-  
+
+  <!-- Affichage d'une erreur si la requête échoue -->
+  <div *ngIf="errorMessage" class="alert alert-danger">
+    {{ errorMessage }}
+  </div>
+
+  <!-- Légende des couleurs -->
+  <div class="mt-3 mb-2" *ngIf="!isLoading && ingredients.length > 0">
+    <span class="legende-item corps-gras">Corps gras</span>
+    <span class="legende-item non-corps-gras">Non corps gras</span>
+  </div>
+
+  <!-- Tableau des ingrédients -->
+  <table class="table table-bordered mt-3" *ngIf="!isLoading && ingredients.length > 0">
+    <thead class="table-dark">
+      <tr>
+        <th>ID</th>
+        <th>Nom</th>
+        <th>Ind. INS</th>
+        <th>Ind. Iode</th>
+        <th>Ind. Sapo.</th>
+        <th>Vol. Mousse</th>
+        <th>Tenue Mousse</th>
+        <th>Douceur</th>
+        <th>Lavant</th>
+        <th>Duretée</th>
+        <th>Solubilité</th>
+        <th>Séchage</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let ingredient of ingredients" 
+          [ngClass]="ingredient.estCorpsGras ? 'corps-gras' : 'non-corps-gras'">
+        <td>{{ ingredient.id }}</td>
+        <td>{{ ingredient.nom }}</td>
+        <td>{{ ingredient.ins }}</td>
+        <td>{{ ingredient.iode }}</td>
+        <td>{{ ingredient.sapo }}</td>
+        <td>{{ ingredient.volMousse }}</td>
+        <td>{{ ingredient.tenueMousse }}</td>
+        <td>{{ ingredient.douceur }}</td>
+        <td>{{ ingredient.lavant }}</td>
+        <td>{{ ingredient.durete }}</td>
+        <td>{{ ingredient.solubilite }}</td>
+        <td>{{ ingredient.sechage }}</td>
+      </tr>
+    </tbody>
+  </table>
